Add kimchi verification
