# docs/static/openapi.yml
@@ -4,6 +4,42 @@ info:
   name: ''
   description: ''
 paths:
+  /alignedlayer/verification/params:
+    get:
+      summary: Parameters queries the parameters of the module.
+      operationId: AlignedlayerVerificationQuery_Params
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              params:
+                description: params holds all the parameters of this module.
+                type: object
+            description: >-
+              QueryParamsResponse is response type for the Query/Params RPC
+              method.
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      tags:
+        - Query
   /alignedlayer.verification.Msg/UpdateParams:
     post:
       summary: |-
@@ -97,6 +133,45 @@ paths:
               public_inputs:
                 type: string
               verifying_key:
+                type: string
+      tags:
+        - Msg
+  /alignedlayer.verification.Msg/Verifykimchi:
+    post:
+      operationId: AlignedlayerVerificationMsg_Verifykimchi
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              creator:
+                type: string
+              proof:
                 type: string
       tags:
         - Msg
@@ -3727,39 +3802,6 @@ paths:
       tags:
         - Msg
 definitions:
-  alignedlayer.verification.MsgUpdateParams:
-    type: object
-    properties:
-      authority:
-        type: string
-        description: >-
-          authority is the address that controls the module (defaults to x/gov
-          unless overwritten).
-      params:
-        description: 'NOTE: All parameters must be supplied.'
-        type: object
-    description: MsgUpdateParams is the Msg/UpdateParams request type.
-  alignedlayer.verification.MsgUpdateParamsResponse:
-    type: object
-    description: |-
-      MsgUpdateParamsResponse defines the response structure for executing a
-      MsgUpdateParams message.
-  alignedlayer.verification.MsgVerify:
-    type: object
-    properties:
-      creator:
-        type: string
-      proof:
-        type: string
-      public_inputs:
-        type: string
-      verifying_key:
-        type: string
-  alignedlayer.verification.MsgVerifyResponse:
-    type: object
-  alignedlayer.verification.Params:
-    type: object
-    description: Params defines the parameters for the module.
   google.protobuf.Any:
     type: object
     properties:
@@ -4095,6 +4137,55 @@ definitions:
                   "@type": "type.googleapis.com/google.protobuf.Duration",
                   "value": "1.212s"
                 }
+  alignedlayer.verification.Params:
+    type: object
+    description: Params defines the parameters for the module.
+  alignedlayer.verification.QueryParamsResponse:
+    type: object
+    properties:
+      params:
+        description: params holds all the parameters of this module.
+        type: object
+    description: QueryParamsResponse is response type for the Query/Params RPC method.
+  alignedlayer.verification.MsgUpdateParams:
+    type: object
+    properties:
+      authority:
+        type: string
+        description: >-
+          authority is the address that controls the module (defaults to x/gov
+          unless overwritten).
+      params:
+        description: 'NOTE: All parameters must be supplied.'
+        type: object
+    description: MsgUpdateParams is the Msg/UpdateParams request type.
+  alignedlayer.verification.MsgUpdateParamsResponse:
+    type: object
+    description: |-
+      MsgUpdateParamsResponse defines the response structure for executing a
+      MsgUpdateParams message.
+  alignedlayer.verification.MsgVerify:
+    type: object
+    properties:
+      creator:
+        type: string
+      proof:
+        type: string
+      public_inputs:
+        type: string
+      verifying_key:
+        type: string
+  alignedlayer.verification.MsgVerifyResponse:
+    type: object
+  alignedlayer.verification.MsgVerifykimchi:
+    type: object
+    properties:
+      creator:
+        type: string
+      proof:
+        type: string
+  alignedlayer.verification.MsgVerifykimchiResponse:
+    type: object
   cosmos.auth.v1beta1.MsgUpdateParams:
     type: object
     properties:
