# x/verification/types/codec.go
@@ -11,6 +11,9 @@ func RegisterInterfaces(registry cdctypes.InterfaceRegistry) {
 	registry.RegisterImplementations((*sdk.Msg)(nil),
 		&MsgVerify{},
 	)
+	registry.RegisterImplementations((*sdk.Msg)(nil),
+		&MsgVerifykimchi{},
+	)
 	// this line is used by starport scaffolding # 3
 
 	registry.RegisterImplementations((*sdk.Msg)(nil),
